<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboardFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_contents"
            android:icon="@drawable/ic_book"
            android:title="@string/content" />
        <item
            android:id="@+id/nav_glossary"
            android:icon="@drawable/ic_glossary"
            android:title="@string/glossary" />
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_bookmark"
            android:title="@string/bookmarks" />
        <item
            android:id="@+id/nav_tests"
            android:icon="@drawable/ic_quiz"
            android:title="@string/tests" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
<!--            <item-->
<!--                android:id="@+id/nav_about"-->
<!--                android:icon="@drawable/ic_info"-->
<!--                android:title="@string/about" />-->
        </menu>
    </item>
</menu> 